--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -338,6 +338,22 @@
         form.submit();
     }
 </script>
+
+<footer>
+    <div class = "hoursOfOperation">
+        <h1>
+            Monday - Saturday: 9:30AM - 8:30PM
+        </h1>
+        <h1>
+            Questions? <br>Please email us at raul@raulretail.com
+        </h1>
+        <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
+        <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
+        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23"> </a>
+
+    </div>
+
+</footer>
 </body>
 </html>
 {% endblock %}
