--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -90,7 +90,7 @@
             <div class="navbarIcons"> 
                 <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
                 <div class="hoverDiv2">
-                    <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
+                    <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br><br>
                     <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br><br>
                     <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-947-7200</span>
                 </div>
@@ -101,8 +101,8 @@
                 <div class="hoverDiv3">
                     <span style="letter-spacing: 2px;">VISIT US</span><br><br><br>
                     <span>216 8th Avenue, <br>New York, NY 10011</span><br><br>
-                    <span>Seven Days a Week</span><br><br>
-                    <span>9:00AM - 8:00PM</span>
+                    <span>Monday - Saturday</span><br><br>
+                    <span>9:30AM - 8:00PM</span>
                 </div>
             </div>
 
@@ -362,17 +362,17 @@
             X
         </p>
 
+        <a href = "{% url 'Raul_Inc_cafe' %}">
         <p>
-            cafe flor
+            Cafe-Flor
         </p>
+        </a>
 
+        <a href ="{% url 'Raul_Inc_Home' %}">
         <p>
-            raul
+            RAUL AVILA INC
         </p>
-
-        <p>
-            third
-        </p>
+        </a>
 
     </div>
 
