--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -116,6 +116,25 @@
     </video>
 </div>
 
+<div id ="store">
+    <p onclick="closeStore()" id="cross">
+        X
+    </p>
+
+    <a href = "{% url 'Raul_Inc_cafe' %}">
+        <p>
+            Cafe-Flor
+        </p>
+    </a>
+
+    <a href ="{% url 'Raul_Inc_Home' %}">
+        <p>
+            RAUL AVILA INC
+        </p>
+    </a>
+
+</div>
+
 <script type="text/javascript" src="{% static 'Raul_Inc/JS/main.js' %}" ></script>
 
 </body>
