--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -130,11 +130,11 @@
 
 <footer>
     <div class = "hoursOfOperation">
-        <h1>
+        <h1 style="color: black">
             Monday - Saturday: 9:30AM - 8:30PM
         </h1>
-        <h1>
-            Questions? <br>Please email us at raul@raulretail.com
+        <h1 style="color: black">
+            Questions? <br>Please email us at sales@raulretail.com
         </h1>
         <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
         <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
