--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -90,9 +90,9 @@
             <div class="navbarIcons"> 
                 <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
                 <div class="hoverDiv2">
-                    <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br><br>
+                    <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
                     <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br><br>
-                    <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"> <span> (347)-947-7200</span>
+                    <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}"id="phoneContact"> <span>(347)-947-7200</span>
                 </div>
             </div>
 
@@ -733,7 +733,7 @@
                 Monday - Saturday: 9:30AM - 8:30PM
             </h1>
             <h1>
-                Questions? <br>Please email us at raul@raulretail.com
+                Questions? <br>Please email us at sales@raulretail.com
             </h1>
             <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
             <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
