--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -98,18 +98,17 @@
 </script>
 <footer>
     <div class = "hoursOfOperation">
-        <h1>
-            Monday - Friday: 7AM - 8PM
+        <h1 style="color: black">
+            Monday - Saturday: 9:30AM - 8:30PM
         </h1>
-        <h1>
-            Questions? <br>Please email us at raul@raulavilainc.com
+        <h1 style="color: black">
+            Questions? <br>Please email us at sales@raulretail.com
         </h1>
         <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
         <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
         <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23"> </a>
 
     </div>
-
 </footer>
 </body>
 
