--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -85,18 +85,16 @@
     </form>
 </div>
 
-<div class = "headers" id="headerOnScroll">
+<div class = "headers" id = "headerOnScroll">
     <figure id="figureOnScroll">
-
         <div class="navbarIcons">
             <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
             <div class="hoverDiv2">
                 <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" id="phoneContact"><span> (347)-947-7200</span>
+                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br><br>
+                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}"id="phoneContact"> <span>(347)-947-7200</span>
             </div>
         </div>
-
         <div class="navbarIcons">
             <p><img src="{% static 'Raul/Icons/Icons_Small/location.png' %}" alt="Location"></p>
             <div class="hoverDiv3">
