--- a/Raul/static/Raul/shopping-cart.css
+++ b/Raul/static/Raul/shopping-cart.css
@@ -534,8 +534,10 @@ footer{
     text-align: center;
 }
 
-.hoursOfOperation h1{
+.hoursOfOperation p{
     font-size: 18px;
     padding:10px 0;
+    color: black;
 }
+
 
