--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -136,18 +136,6 @@
 
         <div class = "dropDownMenu">
             <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}" style="color:white">New Arrivals</a></p>
-<!--            <div class="dropDownContent">-->
-<!--                <div class="dropDownContentLinks">-->
-<!--                    <a>Colored Glass Collection</a>-->
-<!--                    <a>Floral Bird Cachepot Collection</a>-->
-<!--                    <a>Blue Wave Cachepot & Bone Frame Collection</a>-->
-<!--                    <a>Clear Glass Collection</a>-->
-<!--                    <a>Lexi Cachepot & Cream Tealight Collection</a>-->
-<!--                    <a>Ceramic & Cement Pot Collection</a>-->
-<!--                    <a>Smoked Cut Glass Collection</a>-->
-<!--                    <a>eylissa & norro vase collection</a>-->
-<!--                </div>-->
-<!--            </div>-->
         </div>
         <div class = "dropDownMenu">
             <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}" style="color:white">Decorative Accessories</a></p>
@@ -219,7 +207,9 @@
                 </div>
             </div>
         </div>
-        <a href="{% url 'venue'%} " ><p id="categoryP" style="color:white"> Venue Bookings</p></a>
+        <div class="dropDownMenu">
+            <p class = "dropDownButton"><a href="{% url 'venue' %}" style="color: white;">Venue Bookings</a></p>
+        </div>
 
     </div>
 </div>
@@ -354,21 +344,21 @@
 
 
 <div id ="store">
-    <p onclick="closeStore()" id="cross">
+    <p onclick="closeStore()" id="cross" title="Close This">
         X
     </p>
 
+    <a href = "{% url 'Raul_Inc_cafe' %}">
     <p>
-        cafe flor
+        Cafe-Flor
     </p>
+    </a>
 
+    <a href ="{% url 'Raul_Inc_Home' %}">
     <p>
-        raul
+        RAUL AVILA INC
     </p>
-
-    <p>
-        third
-    </p>
+    </a>
 
 </div>
 <div>
