--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -130,19 +130,19 @@
 
 <footer>
     <div class = "hoursOfOperation">
-        <h1 style="color: black">
+        <p>
             Monday - Saturday: 9:30AM - 8:30PM
-        </h1>
-        <h1 style="color: black">
+        </p>
+        <p>
             Questions? <br>Please email us at sales@raulretail.com
-        </h1>
-        <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20"> </a>
-        <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32"> </a>
-        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23"> </a>
-
+        </p>
+        <a href = "https://www.instagram.com/raulavilainc/"> <img src="{%static 'Raul/Images/instagram-logo.png' %}" height="20" draggable="false" alt="Instagram Logo"> </a>
+        <a href = "https://www.facebook.com/RAULAVILAINC/"> <img src="{%static 'Raul/Images/facebook1.png' %}" height="32" draggable="false" alt="Facebook Logo"> </a>
+        <a href = "https://twitter.com/RaulAvilaInc/"> <img src="{%static 'Raul/Images/iconmonstr-twitter-1.svg' %}" height="23" draggable="false" alt="Twitter Logo"> </a>
     </div>
 
 </footer>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
