--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -7,23 +7,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/homepage.css' %}">
     <style>
-        .fullscreen-bg {
-            position: fixed;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            overflow: hidden;
-            z-index: -100;
-            height: 100%;
 
-        }
-
-        .fullscreen-bg__video {
-            position: absolute;
-            top: -600px;
-            left: 0;
-            width:100vw;
-        }
 
         .fixed{
             background-color: transparent;
@@ -43,6 +27,53 @@
         #navlists{
             background-color: transparent;
         }
+
+        #store{
+    width:100%;
+    height:0%;
+    overflow: hidden;
+    background-color: rgba(0,0,0,0.95);
+    position: fixed;
+    left:0;
+    top:0;
+    color: #cfbb63;
+    font-family: myFirstFont;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    transition: 0.4s ease-in-out;
+    z-index:100;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+#store a p{
+    font-size:4em;
+    font-weight: 900;
+    padding:0px;
+    letter-spacing: 0.2em;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    color:#cfbb63;
+}
+
+#store #cross{
+    font-size: 2em;
+    color: #cfbb63;
+    margin-bottom: 20px;
+}
+
+#store a p:hover{
+    color: orange;
+    cursor: pointer;
+}
+
+#store #cross:hover{
+    cursor: pointer;
+    color:orange;
+}
 
         #navlists li {
             /*background: #000;*/
@@ -65,15 +96,7 @@
           }
         }
         */
-        @media (max-width: 767px) {
-            .fullscreen-bg {
-                background: url("{%static 'Raul/Images/Timelapse_MetGala2019_Sqaure.m4v' %}") center center / cover no-repeat;
-            }
-
-            .fullscreen-bg__video {
-                display: none;
-            }
-        }
+        
     </style>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
     <script type="text/javascript" src="{% static 'Raul_Inc/JS/jquery.cycle.js' %}" ></script>
@@ -86,7 +109,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'Raul_Inc/CSS/font-awesome.min.css' %}">
 
 <div id="navcontainers" class="fixed">
-    <div id="logo" class="home-logo"><img src="{%static 'Raul_Inc/Images/raulAvilaIncFinal.png' %}"/></div>
+    <div id="logo" class="home-logo" onclick="openStore()"><img src="{%static 'Raul_Inc/Images/raulAvilaIncFinal.png' %}"/></div>
     <ul id="navlists">
         <li><a href="{%url 'Raul_Inc_Home' %}">HOME</a></li>
         <li><a href="{%url 'Raul_Inc_Bio' %}">BIO</a></li>
@@ -129,13 +152,22 @@
 
     <a href ="{% url 'Raul_Inc_Home' %}">
         <p>
-            RAUL AVILA INC
+            Raul Retail
         </p>
     </a>
-
 </div>
 
 <script type="text/javascript" src="{% static 'Raul_Inc/JS/main.js' %}" ></script>
+<script>
+    function openStore(){
+        document.getElementById("store").style.height = "100%";
+    }
+
+    function closeStore(){
+        document.getElementById("store").style.height = "0%";
+    }
+</script>
+
 
 </body>
 </html>
