--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -91,8 +91,8 @@
             <p><img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}" alt="Contact Us"></p>
             <div class="hoverDiv2">
                 <span style="letter-spacing: 2px;">CONTACT US</span><br><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/email.png' %}"> <span>sales@raulretail.com</span><br><br>
-                <img src="{% static 'Raul/Icons/Icons_Small/phone.png' %}"id="phoneContact"> <span>(347)-947-7200</span>
+                <span>sales@raulretail.com</span><br><br>
+                 <span>(347)-947-7200</span>
             </div>
         </div>
         <div class="navbarIcons">
@@ -356,7 +356,7 @@
 
     <a href ="{% url 'Raul_Inc_Home' %}">
     <p>
-        RAUL AVILA INC
+        RAÚL ÀVILA INC.
     </p>
     </a>
 
