--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -355,7 +355,7 @@
 
         <a href ="{% url 'Raul_Inc_Home' %}">
         <p>
-            RAUL AVILA INC
+            RAÚL ÀVILA INC.
         </p>
         </a>
 
