--- a/Raul_Inc/templates/Raul_Inc/home.html
+++ b/Raul_Inc/templates/Raul_Inc/home.html
@@ -150,9 +150,9 @@
         </p>
     </a>
 
-    <a href ="{% url 'Raul_Inc_Home' %}">
+    <a href ="{% url 'Raul-SecondHome' %}">
         <p>
-            Raul Retail
+            raùl
         </p>
     </a>
 </div>
