--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -58,6 +58,7 @@ input[type=text], input[type=password],input[type=email]{
     text-align: center;
     justify-content: center;
     align-items: center;
+    text-transform: none;
 }
 
 #store a p{
@@ -420,7 +421,7 @@ figure img{
     height: 100vh;
     overflow: hidden;
     position: relative;
-    backface-visibility: hidden;
+
 }
 
 .bannerHeading figcaption{
