--- a/Raul_Inc/static/Raul_Inc/CSS/main.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/main.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+
+@font-face {
+    font-family: myFirstFont;
+    src: url(avenir-lt-std-35-light.otf);
+}
+
 * {
     margin: 0px;
     padding: 0px;    /* to reset default margins and paddings */
@@ -62,10 +69,12 @@ body {margin:0;padding:0;}
 }
 
 a {
+    font-family: myFirstFont;
     text-decoration: none;
     position: relative;
     font-weight:500;
     font-size:16px;
+    padding-bottom: 100px;
 }
 
 a:hover {
