--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -51,10 +51,10 @@ h1{
     place-content: center;
     place-items: center;
     scroll-behavior: smooth;
-    background-image: url('Images/RaulRetail_Feb13th2020__3176.jpg');
+    background-image: url('Images/RaulRetail_Feb13th2020__3198.jpg');
     width:100%;
     height:100vh;
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
@@ -94,6 +94,7 @@ h1{
 
 .overlayImage img{
     width: 100%;
+    background-position: top;
 }
 
 .overlayImage:hover{
