--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -14,10 +14,8 @@ body{
     overflow: hidden;
     justify-items: center;
     align-items: center;
-    /* background: url('Images/FullSize_MetGala2019_001.jpg'); */
     background-position: center;
     background-size: cover;
-    /* filter: brightness(60%); */
 }
 
 .initialBack{
@@ -287,7 +285,7 @@ a .container p{
     padding:30px 30px 5px 30px;
     margin-left:auto;
     margin-right: auto;
-    font-size: 75px;
+    font-size: 50px;
     color: white;
     font-family: myFirstFont;
     letter-spacing: 4px;
@@ -301,7 +299,7 @@ a .container p{
 
 a #raulAvila{
     text-align: center;
-    font-size: 60px;
+    font-size: 55px;
     /* width: 30em;
     height: 6em; */
     z-index:99;
@@ -380,8 +378,8 @@ a .container:hover p{
         margin:20px auto;
     }
 
-    .placeContainers{
-        padding:35vh 0; 
+    a #raulAvila{
+        font-size: 30px;
     }
 
     .bigContainer2{
