--- a/Raul_Inc/static/Raul_Inc/CSS/cafe.css
+++ b/Raul_Inc/static/Raul_Inc/CSS/cafe.css
@@ -38,12 +38,7 @@ h1{
     text-align: center;
 }
 
-#parallax{
-    background-attachment: fixed;
-    background-size: cover;
-    width:100%;
-    height:100vh;
-}
+
 
 .sections{
     display:grid;
@@ -53,10 +48,9 @@ h1{
     scroll-behavior: smooth;
     background-image: url('Images/RaulRetail_Feb13th2020__3198.jpg');
     width:100%;
-    height:100vh;
+    height:100%;
     background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: center center;
 }
 
 
@@ -182,6 +176,10 @@ h1{
 }
 
 .sections1{
+    width:100%;
+    height:100vh;
+    background-size: cover;
+    background-position: center center;
     background-image: url('Images/cafe3.jpg');
 }
 
