--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -56,7 +56,7 @@
             <div class = "menuHeros">
                 <div class="menus">
                     <div class="text">
-                        <h2><a href ="{%static 'Raul_Inc/Doc/Cafe.pdf'%}" target="blank">Cafe Menu</a></h2>
+                        <h2><a href ="{%static 'Raul_Inc/Doc/CafeMenu.pdf'%}" target="blank">Cafe Menu</a></h2>
                     </div>
                     <div class = "overlayImage">
                         <img src="{%static 'Raul_Inc/Images/RaulRetail_Feb13th2020__3194.jpg'%}">
@@ -66,10 +66,10 @@
                 </div>
                 <div class = "menus">
                     <div class ="text">
-                        <h2><a href ="{%static 'Raul_Inc/Doc/Wine.pdf'%}" target="blank">Wine Menu</a></h2>
+                        <h2><a href ="{%static 'Raul_Inc/Doc/WineMenu.pdf'%}" target="blank">Wine Menu</a></h2>
                     </div>
                     <div class = "overlayImage">
-                        <img src="{%static 'Raul_Inc/Images/IMG_1288.jpg'%}">
+                        <img src="{%static 'Raul_Inc/Images/WinePic.jpg'%}">
                        
                     </div>
                     
@@ -80,7 +80,7 @@
 
 
 
-    <div class="sections1" id = "parallax">
+    <div class="sections1">
     </div>
     <footer>
         <div class = "hoursOfOperation">
@@ -93,8 +93,7 @@
                 Phone: 1 (347)-990-2100
             </h1>
             <h1>
-                Address: 218 8th Avenue, New York, NY 10011, USA
-                Hello
+                Address: 218 8th Avenue, New York, NY 10011
             </h1>
         </div>
 
