--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -303,6 +303,7 @@ a .container p{
 } */
 
 a #raulAvila{
+    font-family: myFirstFont;
     text-align: center;
     font-size: 55px;
     /* width: 30em;
@@ -320,6 +321,7 @@ a #raulAvila img{
 }
 
 a #raul{
+    font-family: myFirstFont;
     /* text-align: left;
     width: 15em;
     height: 6em; */
@@ -334,11 +336,11 @@ a #raul img{
 }
 
 a #cafe{
+    font-family: mySecondFont;
     /* text-align: right; */
     /* width:15em; */
     /* height: 6em; */
     z-index:99;
-
     /* margin:0px 0px 0px 16rem; */
 }
 
