--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -134,9 +134,9 @@
 
     <div class="category" id="hideOnScroll" style="padding-bottom:0">
 
-        <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}" style="color:white">New Arrivals</a></p>
-        </div>
+<!--        <div class = "dropDownMenu">-->
+<!--            <p class="dropDownButton"><a  href="{% url 'sec-view' 'New Arrivals' %}" style="color:white">New Arrivals</a></p>-->
+<!--        </div>-->
         <div class = "dropDownMenu">
             <p class="dropDownButton"><a  href="{% url 'sec-view' 'Decorative Accessories' %}" style="color:white">Decorative Accessories</a></p>
             <div class="dropDownContent">
@@ -145,21 +145,22 @@
                     <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
                     <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
                     <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
-                </div>
-            </div>
-
-        </div>
-
-        <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}" style="color:white">Tabletop</a></p>
-            <div class="dropDownContent">
-                <div class="dropDownContentLinks">
                     <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
-                    <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>
                 </div>
-
             </div>
+
         </div>
+
+<!--        <div class = "dropDownMenu">-->
+<!--            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Tabletop' %}" style="color:white">Tabletop</a></p>-->
+<!--            <div class="dropDownContent">-->
+<!--                <div class="dropDownContentLinks">-->
+<!--                    <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>-->
+<!--                    <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>-->
+<!--                </div>-->
+
+<!--            </div>-->
+<!--        </div>-->
 
         <div class = "dropDownMenu">
             <p class="dropDownButton"><a  href="{% url 'sec-view' 'Furniture' %}" style="color:white">Furniture</a></p>
@@ -178,27 +179,26 @@
             <p class="dropDownButton"><a  href="{% url 'sec-view' 'Floral' %}" style="color:white">Floral</a></p>
         </div>
 
-        <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}" style="color:white">Wall Art</a></p>
-            <div class="dropDownContent">
-                <div class="dropDownContentLinks">
-                    <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>
-                    <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
-                </div>
-            </div>
-        </div>
+<!--        <div class = "dropDownMenu">-->
+<!--            <p class="dropDownButton"><a  href="{% url 'sec-view' 'Wall Art' %}" style="color:white">Wall Art</a></p>-->
+<!--            <div class="dropDownContent">-->
+<!--                <div class="dropDownContentLinks">-->
+<!--                    <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>-->
+<!--                    <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
-        <div class = "dropDownMenu">
-            <p class="dropDownButton"><a  href="{% url 'Raul-product' %}" style="color:white">All Products</a></p>
-        </div>
+<!--        <div class = "dropDownMenu">-->
+<!--            <p class="dropDownButton"><a  href="{% url 'Raul-product' %}" style="color:white">All Products</a></p>-->
+<!--        </div>-->
 
 
         <div class = "dropDownMenu">
             <p class="dropDownButton" ><a  href="{% url 'sec-view' 'Sale' %}" style="color:white">Sale</a></p>
             <div class="dropDownContent">
                 <div class="dropDownContentLinks">
-                    <a  href="{% url 'cat-view' 'All Sale Items' %}">All Sale Items</a>
                     <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
                     <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                     <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
@@ -240,13 +240,13 @@
             <li class="exitButton">
                 <img src="{% static 'Raul/CSS/exit.svg' %}" id="exitButton" onclick="closeNav()" draggable="false">
             </li>
-            <li>
-                <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton">
-                       <a href ="{% url 'sec-view' 'New Arrivals' %}" > new arrivals </a>
-                        </button>
-                </div>
-            </li>
+<!--            <li>-->
+<!--                <div class = "menuDropdown">-->
+<!--                    <button class = "mobile-dropdownButton">-->
+<!--                       <a href ="{% url 'sec-view' 'New Arrivals' %}" > new arrivals </a>-->
+<!--                        </button>-->
+<!--                </div>-->
+<!--            </li>-->
             <li>
                 <div class = "menuDropdown">
                     <button class = "mobile-dropdownButton" onclick = "mobileDropDown2()">
@@ -258,21 +258,22 @@
                         <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
                         <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
                         <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton" onclick = "mobileDropDown3()">
-                        tabletop
-                        <i class="arrow down"></i>
-                    </button>
-                    <div id="mobile-dropdown3" class="mobile-dropdownContent">
                         <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
-                        <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>
                     </div>
                 </div>
             </li>
+<!--            <li>-->
+<!--                <div class = "menuDropdown">-->
+<!--                    <button class = "mobile-dropdownButton" onclick = "mobileDropDown3()">-->
+<!--                        tabletop-->
+<!--                        <i class="arrow down"></i>-->
+<!--                    </button>-->
+<!--                    <div id="mobile-dropdown3" class="mobile-dropdownContent">-->
+<!--                        <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>-->
+<!--                        <a  href="{% url 'cat-view' 'Pitchers' %}">Pitchers</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </li>-->
             <li>
                 <div class = "menuDropdown">
                     <button class = "mobile-dropdownButton" onclick = "mobileDropDown4()">
@@ -294,25 +295,25 @@
                     </button>
                 </div>
             </li>
-            <li>
-                <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton" onclick = "mobileDropDown5()">
-                        wall art
-                        <i class="arrow down"></i>
-                    </button>
-                    <div id="mobile-dropdown5" class="mobile-dropdownContent">
-                        <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>
-                        <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
-                    </div>
-                </div>
-            </li>
-            <li>
-                <div class = "menuDropdown">
-                    <button class = "mobile-dropdownButton">
-                        <a  href="{% url 'Raul-product' %}">all products</a>
-                    </button>
-                </div>
-            </li>
+<!--            <li>-->
+<!--                <div class = "menuDropdown">-->
+<!--                    <button class = "mobile-dropdownButton" onclick = "mobileDropDown5()">-->
+<!--                        wall art-->
+<!--                        <i class="arrow down"></i>-->
+<!--                    </button>-->
+<!--                    <div id="mobile-dropdown5" class="mobile-dropdownContent">-->
+<!--                        <a  href="{% url 'cat-view' 'Artwork' %}">ArtWork</a>-->
+<!--                        <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </li>-->
+<!--            <li>-->
+<!--                <div class = "menuDropdown">-->
+<!--                    <button class = "mobile-dropdownButton">-->
+<!--                        <a  href="{% url 'Raul-product' %}">all products</a>-->
+<!--                    </button>-->
+<!--                </div>-->
+<!--            </li>-->
             <li>
                 <div class = "menuDropdown">
                     <button class = "mobile-dropdownButton" onclick = "mobileDropDown6()">
@@ -320,7 +321,6 @@
                         <i class="arrow down"></i>
                     </button>
                     <div id="mobile-dropdown6" class="mobile-dropdownContent">
-                        <a  href="{% url 'cat-view' 'All Sale Items' %}">All Sale Items</a>
                         <a  href="{% url 'cat-view' 'Bowls' %}">Bowls</a>
                         <a  href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                         <a  href="{% url 'cat-view' 'Glasswear' %}">Glasswear</a>
