--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -426,7 +426,7 @@
                 <a href="{% url 'cat-view' single_product.category %}" >{{single_product.category}}</a>
                 <h1>{{single_product.title}}</h1>
                 {% if single_product.variation_set.sizes %}
-                <p id = "priceTitle">select a price</p>
+                <p id = "priceTitle">select a variation</p>
                 {%else%}
                 <div class="product-price">
                     ${{single_product.price}}
