mirror mobile DA

--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -142,6 +142,7 @@
                         <a href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                         <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
                         <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
+                        <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
                         <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
                         <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
                     </div>
@@ -257,6 +258,7 @@
                             <a href="{% url 'cat-view' 'Candlelight' %}">Candlelight</a>
                             <a href="{% url 'cat-view' 'Decorative Objects' %}">Decorative Objects</a>
                             <a  href="{% url 'cat-view' 'Urns' %}">Urns</a>
+                            <a  href="{% url 'cat-view' 'Mirrors' %}">Mirrors</a>
                             <a  href="{% url 'cat-view' 'Vases and Cachepots' %}">Vases & Cachepots</a>
                             <a href="{% url 'cat-view' 'Dinnerware' %}">Dinnerware</a>
                           </div>
