--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -51,8 +51,19 @@
                         </figcaption>
                     </div>
                 </div>
+            </a>           
+        </div>
+        <div class="bigContainer2">
+            <a href="{% url 'venue' %}">
+                <div class="container" id="venueBanner">
+                    <p id= "venue">venue bookings</p>
+                    <div class="backgroundText4">
+                        <figcaption>
+                            CAFE FLOR
+                        </figcaption>
+                    </div>
+                </div>
             </a>
-           
         </div>
     </div>
 
