--- a/Raul_Inc/templates/Raul_Inc/cafe.html
+++ b/Raul_Inc/templates/Raul_Inc/cafe.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class = "menus">
                     <div class ="text">
-                        <h2><a href ="{%static 'Raul_Inc/Doc/WineMenu.pdf'%}" target="blank">Wine Menu</a></h2>
+                        <h2><a href ="{%static 'Raul_Inc/Doc/wine menu.pdf'%}" target="blank">Wine Menu</a></h2>
                     </div>
                     <div class = "overlayImage">
                         <img src="{%static 'Raul_Inc/Images/WinePic.jpg'%}">
